src/objects/Seizure__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Observed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Observed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Seizures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Seizures</relationshipLabel>
        <relationshipName>Seizures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Seizure</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Seizure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seizures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>